kubernetes/dolphie-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dolphie-ui
  namespace: platform
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: dolphie-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: dolphie-ui
    spec:
      containers:
        - name: web-terminal
          image: izerui/dolphie-ui
          imagePullPolicy: Always
          ports:
            - containerPort: 7681
              name: terminal
              protocol: TCP
          command:
            - /bin/bash
            - -c
            - |
              ttyd -p 7681 --writable -c admin:admin123 dolphie --config-file rds.conf --hostgroup rds_cluster --tab-setup
          volumeMounts:
            - mountPath: /home/linuxbrew/rds.conf
              name: dolphie-config
              subPath: rds.conf
              readOnly: true
      volumes:
        - name: dolphie-config
          configMap:
            name: mysql-monitor-config

---
apiVersion: v1
kind: Service
metadata:
  name: dolphie-ui-service
  namespace: platform-yunji
spec:
  selector:
    app: dolphie-ui
  ports:
    - port: 80
      targetPort: 7681
      protocol: TCP
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dolphie-ui-ingress
  namespace: platform
  annotations:
    nginx.org/websocket-services: "mysql-monitor-service"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: yourdomain-secret
      hosts:
        - dolphie-ui.yourdomain.com
  rules:
    - host: dolphie-ui.yourdomain.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: dolphie-ui-service
                port:
                  number: 80
